Fix sometimes not aligning the menu-toggle

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -57,12 +57,14 @@ pre {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background: #333e;
-    border: 1px solid #444;
-    border-radius: 50%;
     width: 50px;
     height: 50px;
     cursor: pointer;
+    background: #333e;
+    border: 1px solid #444;
+    border-radius: 50%;
+    align-content: center;
+    justify-content: center;
     box-shadow: 0 4px 12px #0007;
 }
 .sidebar-toggle img {
@@ -253,7 +255,7 @@ pre {
         position: fixed;
         transform: translateX(-100%);
     }
-    .sidebar-toggle { display: block; }
+    .sidebar-toggle { display: flex; }
     #sidebar.open { transform: translateX(0); }
 }
 
